# HeartDiseaseClassifier

./: .env.example  .gitignore  README.md  docker-compose.yaml  nginx.conf  prometheus.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  celery_app.py  create_superuser.py  logger.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2025_03_16_2308-f63b136e95ad_user_table.py  2025_03_16_2308-f63b136e95ad_your_migration_message.py  2025_03_17_1637-adb514c8b2e2_users_and_access_token_table.py  2025_03_23_1810-d62571e1af54_results_table.py  2025_03_23_2021-7ee9f33c2fcd_users_and_results_table_rectreation_fix.py  2025_03_23_2148-1c952703a803_users_and_results_table_rectreation_fix.py
backend/api/: main.py
backend/api/dependencies/: access_tokens.py  fastapi_users.py  strategy.py  user_managers.py  users.py
backend/api/dependencies/authentication/: access_tokens.py  strategy.py  user_managers.py
backend/api/routes/: auth.py  detector.py  fastapi_users.py  users.py
backend/core/: config.py  engine.py
backend/core/auth/: transport.py  user_manager.py
backend/core/db/: base.py  engine.py
backend/core/db/models/: __init__.py  access_token.py  base.py  result.py  user.py
backend/db/: base.py  config.py  engine.py
backend/db/models/: user.py
backend/repositories/: results.py
backend/schemas/: detector.py  user.py
backend/services/: classifaer.py  classifier.py  classifier_worker.py
frontend/: Dockerfile  app.py  auth.py  classifier.py  logger.py  pyproject.toml  requirements.txt
frontend/pages/: classifier.py
model/: .dockerignore  Dockerfile  celery_app.py  config.py  logger.py  pyproject.toml  requirements.txt
model/services/: classifier.py  classifier_worker.py
notebooks/: data_preprocessing.ipynb  testing.ipynb  training.ipynb
