[tool.poetry]
name = "heartdiseasedetector"
version = "0.1.0"
description = "Web-Applications for Auscultation Data Analysis using Audio Spectrogram Transformer, fastapi, rabbitmq, postgresql and Streamlit"
authors = ["Vdmrl <vvluzin2004@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.11"
prometheus-fastapi-instrumentator = "^7.0.2"
redis = "^5.2.1"
sqlalchemy = "^2.0.38"
pydantic-settings = "^2.8.1"
fastapi-cache2 = "^0.2.2"
numpy = "<2.0"
python-multipart = "^0.0.20"
gunicorn = "^23.0.0"
python-json-logger = "^3.3.0"
librosa = "^0.10.2.post1"
celery = "^5.4.0"
psycopg2 = "^2.9.10"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
asyncpg = "^0.30.0"
alembic = "^1.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
