[tool.poetry]
name = "frontend"
version = "0.1.0"
description = "Streamlit frontend for heart disease detector"
authors = ["Vdmrl <vvluzin2004@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.43.1"
streamlit-advanced-audio = "^0.1.1"
ffmpeg = "^1.4"
pydub = "^0.25.1"
ffprobe = "^0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
